# axum_backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MEMORY.md  README.md  build.rs  clippy.toml  diesel.toml  rustfmt.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: review.md
.claude/hooks/: pre-compact-flush.py  session-end-flush.py  session-start-context.py  session_start_cache.txt
.claude/rules/: code-style.md  commit-guidelines.md
.claude/scripts/: db.py  embeddings.py  memory_index.py  memory_search.py  query.py
.claude/scripts/integrations/: github.py  registry.py
.claude/skills/claude-memory-skill/: SKILL.md
.claude/skills/codebase-rater-skill/: SKILL.md
.claude/skills/pre-push/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/workflows/: claude-code-review.yml  claude-pr-review.yml  claude.yml
Dynamous/Memory/: MEMORY.md  SOUL.md  USAGE.md  USER.md
Dynamous/Memory/daily/: 2026-04-12.md
Dynamous/Memory/docs/: second-brain-test-report.md
audit/: 2026-04-07-REPORT.md
docker/: README.md  docker-compose.scylla.yml
docker/backend/: Dockerfile  docker-compose.yml  run_container.sh
docker/postgres/: Dockerfile  docker-compose.yml
docker/postgres/init/: 01-init.sql
docker/scylla/: Dockerfile  docker-compose.yml  entrypoint.sh  manager-entrypoint.sh  scylla-manager-agent.conf  scylla-manager.yaml
docker/scylla-cluster/: Dockerfile  docker-compose.yml  scylla-manager.yaml
examples/: grpc_load_test.rs  post_api_workflow.rs
memory/: api.md  architecture.md  testing.md
migrations/2026-02-10-120000_init_user_schema/: down.sql  up.sql
migrations/2026-04-08-120000_widen_confirmation_code/: down.sql  up.sql
plans/claude-codes/: post.md  post_redis_cache.md
proto/: user.proto
scripts/: GRPC-README.md  stress_test_create_user.sh  stress_test_register_user.sh
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/actors/: import.rs  mod.rs
src/application/commands/: mod.rs
src/application/dto/: auth.rs  mod.rs  post.rs  role.rs  user.rs
src/application/queries/: mod.rs
src/application/services/: auth.rs  email.rs  mod.rs  user.rs
src/application/use_cases/: mod.rs
src/config/: app_config.rs  database.rs  mod.rs  scylla.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  post.rs  refresh_token.rs  user.rs
src/domain/errors/: mod.rs
src/domain/repositories/: auth.rs  mod.rs  post.rs  user.rs
src/domain/value_objects/: email.rs  mod.rs  user_id.rs  user_role.rs
src/grpc/: mod.rs
src/grpc/actors/: messages.rs  mod.rs  pool.rs  user_service_actor.rs
src/grpc/application/: mod.rs
src/infrastructure/: mod.rs  monitoring.rs
src/presentation/: mod.rs
src/shared/: mod.rs
templates/: confirmation.html  forgot_password.html  welcome.html
tests/: README.md  api_tests.rs  integration_tests.rs  load_tests.rs  run_tests.sh
tests/api/: auth.rs  cookie_auth.rs  health.rs  monitoring.rs  post.rs  preflight.rs
tests/benchmarks/: backend_benchmarks.rs
tests/common/: assertions.rs  factories.rs  grpc_server.rs  mock.rs  mod.rs  repository_mocks.rs  server.rs
tests/grpc/: STRESS_TESTS.md  mod.rs  stress_tests.rs  user_tests.rs
tests/integration/: email_tests.rs
tests/load/: load_tests.rs
tests/redis/: cache.rs  cluster.rs  locking.rs  mod.rs
(+146 files in other folders)
