[package]
name = "axum_backend"
version = "0.1.0"
edition = "2021"
authors = ["Nhi Tran <nhitran@example.com>"]
description = "A robust, production-ready Axum backend with DDD architecture."
repository = "https://github.com/nhitran/axum_backend"
license = "MIT"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Staging: Close to release, but with debug symbols for profiling
[profile.staging]
inherits = "release"
debug = true
strip = false
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"       # Maximum link-time optimization
codegen-units = 1 # Better optimization at cost of compile time
strip = true      # Remove debug symbols for smaller binary
panic = "abort"   # Reduce binary size, no unwinding

[features]
default = ["swagger"]
swagger = ["dep:utoipa-swagger-ui"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "trace",
    "cors",
    "compression-gzip",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Database
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
diesel_migrations = "2.1"
deadpool = { version = "0.12.3", features = ["rt_tokio_1"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.8"

# Async
async-trait = "0.1"
ractor = "0.13"
futures = "0.3.31"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-reflection = "0.12"
tonic-web = "0.12"

# Documentation (Swagger)
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"], optional = true }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
time = "0.3.47"
reqwest = { version = "0.11", features = ["cookies", "json"] }
axum-prometheus = "0.10.0"
sysinfo = "0.38.1"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "pool",
    "tracing",
] }
askama = "0.15.4"
redis = { version = "1.0.3", features = [
    "tokio-comp",
    "connection-manager",
    "cluster-async",
] }
async-nats = "0.35"
bytes = "1.11.1"

[dev-dependencies]
# Testing
axum-test = "14.0"
mockall = "0.12"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.2", features = ["postgres"] }
goose = "0.17"
goose-eggs = "0.6"
tokio-stream = { version = "0.1.18", features = ["net"] }

[[bench]]
name = "backend_benchmarks"
path = "tests/benchmarks/backend_benchmarks.rs"
harness = false

[build-dependencies]
tonic-build = "0.12"
